--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-saga-boilerplate",
   "description": "Boilerplate with React and Redux with Redux Saga",
   "version": "2022.3.0",
-  "author": "Gil Barbara <gilbarbara@gmail.com>",
+  "author": "Santa Clous <santaclous112@gmail.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/gilbarbara/react-redux-saga-boilerplate"
